--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
   "author": "Tom MacWright",
   "license": "ISC",
   "dependencies": {
-    "JSONStream": "^0.10.0",
-    "graphlib": "^1.0.1",
-    "module-deps": "^3.7.3"
+    "JSONStream": "^1.3.1",
+    "graphlib": "^2.1.1",
+    "module-deps": "^4.1.1"
+  },
+  "devDependencies": {
+    "tape": "^4.8.0"
+  },
+  "repository" : {
+      "type": "git",
+      "url": "https://github.com/tmcw/circular-require.git"
   }
 }
